@@ -1,421 +1,0 @@
-<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
-<html>
- <head>
-  <title>The GNOME Foundation: Elections</title>
- </head>
- <body bgcolor="#FFFFFF">
-  <center>
-   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
-    <tr VALIGN=TOP NOSAVE>
-     <td VALIGN=TOP NOSAVE>
-      <center>
-       <a href="http://www.gnome.org">
-       <img SRC="gnome.jpg" ALT="" height=250 width=198 border=0></a><img
-       SRC="text.png" ALT="The GNOME Foundation" height=198 width=354>
-      </center>
-     </td>
-    </tr>
-
-    <tr>
-     <td>
-      <center>
-       <a href="index.html">Home</a> :&nbsp;
-       <a href="press.html">Press</a> :&nbsp;
-       <a href="organization.html">Organization</a> :&nbsp;
-       <a href="documentation.html">Documentation</a> :&nbsp;
-       <a href="membership.html">Membership</a> :&nbsp;
-       Elections :&nbsp;
-       <a href="directory.html">Directory</a>
-      </center>
-      <br>
-      <center>
-       General Information :&nbsp;
-       <a href="electionrules.html">Rules & Timeline</a> :&nbsp;
-       List of candidates : &nbsp;
-       <a href="election-2000.html">2000</a>
-      </center>
-     </td>
-    </tr>
-
-    <!-- End of Boilerplate --> 
-     <tr>
-       <td>
-<center>
-<H3>Candidates for GNOME Foundation Elections</H3>
-<P>Nov 10, 2001</P>
-<P><BR><BR></P>
-</center>
-
-<P>Below you will find a list of candidates who are running for the
-GNOME Foundation Board of Directors. A short summary statement from
-each candidate and a link to their full candidacy announcement is
-provided to help you learn more about them. We encourage all voters
-to read the full candidacy statements and related discussions on
-foundation-list@gnome.org
-(<A HREF="http://mail.gnome.org/archives/foundation-list/">http://mail.gnome.org/archives/foundation-list/</A>).</P>
-<P>When deciding who you should vote for, please carefully consider
-the various tasks the Board of Directors must perform. This overview
-(<A HREF="/overview.html">http://foundation.gnome.org/overview.html</A>)
-may be helpful. Keep in mind that the board will make a number of
-important decisions and will also have to perform many tasks which
-require a significant amount of time and effort and the ability to
-work and communicate with other people, companies, and the media. The
-board of directors will represent GNOME to companies and the world in
-a very real way. It is a good idea to strive for a well-balanced
-board consisting of people with various backgrounds, skills, and
-perspectives.</P>
-<P>Additional election details can be found at the end of this
-message and on <A HREF="/">http://foundation.gnome.org</A>
-(where you can also find this document).</P>
-<P>If you have any questions, please send them to either
-foundation-list@gnome.org or to us at elections@gnome.org.</P>
-<P>The elections committee.</P>
-<P><BR><BR>
-</P>
-<P><B>CANDIDATES FOR THE GNOME FOUNDATION BOARD OF DIRECTORS</B> 
-</P>
-
-<P>1. DANIEL VEILLARD
-&quot;
-I am French, long time Gnomer and Linux addict, maintainer of
-libxml, libxslt and rpmfind. I served on the Gnome Board for last
-year and I am used to non-profit organizations and the negotiation
-needed to reach consensus in a group. I will focus on the reuse
-of standards, internationalization and keeping trust relationship at an
-individual level. I think those are needed to keep hacking on Gnome fun
-and getting acceptance in new communities. Affiliation Red Hat.
-&quot;
-Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00001.html">
-http://mail.gnome.org/archives/foundation-announce/2001-November/msg00001.html</a>
-</P>
-
-<P>2. BASTIEN NOCERA
-&quot;
-I'm a relative newcomer to the Gnome world as a programmer, with my main 
-interests in multimedia, all ease-of-use concerns (accessibility 
-included), and portability. I've never run for any elections on such a 
-Board, but I have some experience in strongly opinionated discussions (with 
-politics, and not hackers ;), and being French, I have a big mouth as well.
-Hmm, couple of words to go...I like bitter ale. 
-&quot;
-No affiliations. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00002.html">
-http://mail.gnome.org/archives/foundation-announce/2001-November/msg00002.html</a>
-</P>
-
-<P>3. CHRIS PHELPS
-&quot; 
-GNOME is the smoothest desktop I've ever used, and I intend to do
-anything and everything I can to keep our development rolling. My
-personal peeve is that GNOME is an awesome development environment
-without a respectable IDE. I intend to work on this to make GNOME more
-attractive to all kinds of developers. Yeah, that's about it...
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00004.html">
-http://mail.gnome.org/archives/foundation-announce/2001-November/msg00004.html</a>
-</P>
-
-<P>4. GEORGE LEBL
-&quot;
-I have been with the GNOME project since '97, maintain several packages, and
-have been 'half-part' of the steering committee.  I also pretended to work for
-Eazel for over a year.  I want the GNOME community to stay as chaotic and
-open as it has always been.  So elect me or I'll smack you with a GEGL. 
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00005.html">
-http://mail.gnome.org/archives/foundation-announce/2001-November/msg00005.html</a>
-</P>
-
-<P>5. RHETT CREIGHTON
-&quot; 
-The future is now, and that future is: Bowling Balls.  Do you realize that
-if GNOME starts making bowling balls, we stand to net profit
-$11,000?!  That's right, eleven big ones.  Net profit, mind you. 
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00007.html">
-http://mail.gnome.org/archives/foundation-announce/2001-November/msg00007.html</a>
-</P>
-
-<P>6. HAVOC PENNINGTON
-&quot;
-I have several years of experience with GNOME, and want to help ensure
-continuity between the current board and the new one. My main goal on
-the board is to build up GNOME as a self-sufficient and long-term
-organization with solid infrastructure for keeping things running
-smoothly. I work on GTK+, GConf, packaging GNOME for Red Hat, and
-various less important projects.
-&quot;
-Affiliated with Red Hat. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00008.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00008.html</a>
-</P>
-
-<P>7. GLYNN FOSTER 
-&quot; 
-Easy going 23 year old from Dublin, Ireland seeks position on 
-GNOME Foundation Board ono. Will trade communication, energy 
-and commitment for an honest, hard working life with comfy 
-seat. Will ensure that GNOME remains a happy go-lucky-project that
-people are excited to work on. Previous experience includes 
-gnome-session hacks and being on GNOME Foundation Membership & 
-Elections Committee. Loves Guinness & climbing. Hates celery. 
-Answers to the name of Gman. Email glynn.foster@sun.com after 8pm. 
-&quot;
-Affiliated with Sun Microsystems. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00010.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00010.html</a>
-</P>
-
-<P>8. BILL HANEMAN
-&quot;
-Bill Haneman AKA 'that Accessibility guy'.  "I've been programming over
-20 years, an active Gnome hacker since Dec. 2000. I maintain the Gnome
-Accessibility Project (atk, at-spi), co-moderate
-gnome-accessibility-list, and contribute to Gtk+, libglade,
-libbonoboui.  I'm employed by Sun Microsystems Ireland.  While wearing
-the 'Gnome Board hat' I would work hard to take a broad view of what's
-best for Gnome.  My hopes for Gnome's future include platform
-development/maturation, universal accessibility, interoperability, and
-extensibility. 
-&quot;
-Affiliated with Sun Microsystems. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00011.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00011.html</a>
-</P>
-
-<P>9. ANDY TAI
-&quot;
-I have been a strong supporter for the GNU Project and
-a long time observer of the GNOME Project. I maintains
-the advocacy site free-soft.org and the GUI Toolkit
-and Framework Page, the definite reference for GUI
-toolkits on the Internet.  I understand the major
-weakness of the GNOME architecture at this stage.  If
-I am elected, the first thing I will push is to merge
-gnome-specific widgets into gtk+, so there are less
-number of libraries to link against :-)
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00013.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00013.html</a>
-</P>
-
-<P>10. MICHAEL MEEKS
-&quot;
-Lots of experience of Gnome both technically and relationally, I
-continue to promote Gnome widely at conferences and to companies.
-We must finance and encourage small interest group meetings as
-well as GUADEC to increase real contact time.
-We need to bifurcate the project - the core environment and
-the applications built on top of it, so we can release core
-improvements more quickly, with a stable API, yet rapidly innovate in
-the applications.
-&quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00014.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00014.html</a>
-</P>
-
-<P>11. CHRIS LYTTLE
-&quot;
-Expatriate Kiwi living in the USA. Been involved with running non-profit 
-businesses. Contributor to the Gnome Documentation Project and GnuCash.
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00015.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00015.html</a>
-</P>
-
-<P>12. JEFF WAUGH
-&quot; 
-We need to improve the project's outreach, both within the Free Software
-community and outside it, through documentation, publicity, and making
-good information easy to get to. Some work on infrastructure can make
-other tasks and goals easier, such as contributing and releasing. We need
-more GNOME love and better cooperation. All of this, openly and
-transparently, without interrupting our awesome hacker's hacking time! I'm
-wacky enough to believe we can do it, too. :) 
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00016.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00016.html</a>
-</P>
-
-<P>13. ARIEL RIOS
-&quot;
-My experience ranges from developing on Guile to numerous other contributions 
-including technical reviews for Gtk+ and GNOME related books. I have been hacking  
-in GNOME since the first years of the project. I have attended many conferences  
-as a promoter of Free Software and GNOME. My main goal is to seek that GNOME will 
-turn into a feasible solution against proprietary software turning into a powerful 
-stable API that will be available for everyone.
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00017.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00017.html</a>
-</P>
-
-<P>14. MIGUEL DE ICAZA
-&quot;
-Have been an active contributor to the free software movement since 1992.
-Started the GNOME project when various freedom issues arose that would 
-threaten the future of a fully free system. I am one of the founders of 
-Ximian, one of the GNOME companies, where we employ around 40 GNOME hackers 
-that develop free software. &quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00018.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00018.html</a>
-</P>
-
-<P>15. JAMES HENSTRIDGE
-&quot;
-I have been hacking on gnome for over 3 years, and have been involved in language 
-binding development, gtk/gnome platform library development and also some work on 
-apps.  I am Australian, which may be a good or bad thing, depending on your point 
-of view :)  If elected I can represent these interests on the board.  I served on 
-the GNOME Steering committee from its creation until the Foundation elections last 
-year, where I was one of the unsuccessful candidates.
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00019.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00019.html</a>
-</P>
-
-<P>16. JONATHAN BLANDFORD
-&quot;
-I have been involved with GNOME since 1997.  I have spent a lot of time
-working on many core parts of GNOME, and feel like I have a very good
-idea of how the project works.  I very interested in helping to improve
-the desktop experience, I would like to see GNOME spend more time on the
-small, incremental improvements that make a desktop usable.
-&quot;
-Affiliation Red Hat. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00020.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00020.html</a>
-</P>
-
-<P>17. CHEMA CELORIO 
-&quot;
-I have been contributing to GNOME over the past few years, I want to be
-on the board because I want to help GNOME even further. I have a very
-good relationship with a number of GNOME contributors as well as a very
-good understanding of the GNOME community and what drives GNOME forward.
-I am confident that we can make GNOME the best desktop available and I
-work hard everyday to make it happen.
-&quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00021.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00021.html</a>
-</P>
-
-<P>18. NAT FRIEDMAN
-&quot;
-The foundation could be doing more to help GNOME be more unified,
-move faster, and have more visibility.  Things I would like to see
-include more focus on the desktop itself, more in-person events
-and a coordinated GNOME Office.
-I've been contributing to GNOME since 1998 and co-maintained
-Bonobo for a while.  I wrote the first draft of the foundation's
-charter.  I co-founded Ximian, and these days, I'm in charge of our
-product development. &quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00022.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00022.html</a>
-</P>
-
-<P>19. JIM GETTYS
-&quot;
-I'd like to continue to be on the board to help Gnome reach its potential.
-I feel that we are about a year from having the ingredients to make open
-source desktops viable for the mass market and would like to do what I
-can to help make this happen.  As part of this, I believe interoperability
-is a key ingredient, and will work to encourage Gnome to invest in this
-area.&quot;
-Affiliation Compaq. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00024.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00024.html</a>
-</P>
-
-<P>20. JODY GOLDBERG
-&quot; 
-I have been a free software advocate since the early 90s, and have
-contributed to several projects, from G++ and Wine, to Nethack and a
-pager for CDE.  As the current maintainer of Gnumeric I'm on the
-front lines of what users like and dislike in GNOME.  Our
-technologies are good.  Our integration could use some work.  I'd
-like to work towards improving communication between the far flung
-elements of GNOME to improve that.
-&quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00025.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00025.html</a>
-</P>
-
-<P>21. IAN MCKELLAR 
-&quot;
-I'm an ex-Eazel hacker from Australia who is living in California. I
-have some experience running anarchic organizations like GNOME (on a
-smaller scale) and a strong belief in Free Software.
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00026.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00026.html</a>
-</P>
-
-<P>22. TIM NEY
-&quot; 
-I've presented GNOME to government officials on several continents;
-built public awareness of GNOME around the world through the media,
-seminars and trade shows; secured funding, hardware and services 
-to support GNOME.  I see 2002 as the year GNOME reaches beyond the
-hacker community and to schools, corporations and governments.
-My contribution is to build bridges, develop strategy, policy and
-projects that are inclusive and appeal to a wider geography of
-developers and users.
-&quot;
-Affiliation GNOME Foundation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00027.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00027.html</a>
-</P>
-
-<P>23. RICHARD STALLMAN 
-&quot;
-I've been working for GNOME since years before there was a GNOME.  In
-1983, while formulating plans for the GNU operating system, I decided
-it should include a window system.  After two desktop initiatives that
-didn't pan out, I found Miguel, who launched our third desktop
-project--GNOME. As president of the Free Software Foundation and Chief 
-GNUisance of the GNU Project, I have had years of experience working with
-contributors both individual and corporate.
-&quot;
-Affiliation. Free Software Foundation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00028.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00028.html</a>
-</P>
-
-<P>24. FEDERICO MENA-QUINTERO
-&quot; 
-I'd like to see the GNOME hackers focus more on the desktop and,
-in particular, the user experience now that the GNOME 2.0 platform is almost complete.
-I am a co-founder of the GNOME project, and prior to that I was the
-maintainer of the GIMP.  I worked at Red Hat Advanced Development Labs
-(RHAD Labs) for a year and a half, and have been working for Ximian
-since January 2000 on the Evolution Calendar.
-&quot;
-Affiliation Ximian. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00029.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00029.html</a>
-</P>
-
-<P>25. TELSA GWYNNE
-&quot;
-I do docs, bugs, and hassling developers. I don't code.  I also make last 
-minute decisions.
-&quot;
-No affiliation. Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00030.html">http://mail.gnome.org/archives/foundation-announce/2001-November/msg00030.html</a>
-</P>
-
-<center>
-<P>
-<BR><BR>
-</P>
-<P><B>ADDITIONAL ELECTION-RELATED INFORMATION</B> 
-</P>
-</center>
-
-<P>Ballots will be sent out via e-mail to everyone who's registered
-to vote on Tuesday, November 13, to the address provided with
-registration. If you need to change the address to which you want
-your ballot sent, please contact elections@gnome.org ASAP. People
-will vote by returning the ballot via e-mail. A public archive of the
-ballot returns will be available after the elections end on November
-20.</P>
-
-<P>Also, keep in mind that there is a 4-person maximum on the number
-of people affiliated with any one company that can be on the board:
-if more than 4 persons from one company get elected, only the top 4
-vote getters will get on. You will be able to vote for up to 11
-candidates of your choice, with no restrictions, except that you
-cannot vote more than once for the same candidate.</P>
-
-<P>Additional election-related materials are available at
-<A HREF="/">http://foundation.gnome.org</A>.</P>
-
-     </td>
-    </tr>
-
-    <!-- Start of Boilerplate -->
-    <tr>
-     <td>
-      <center><font size=-1>This site is maintained by
-      <a href="mailto:membership@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
-      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
-      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
-     </td>
-    </tr>
-   </table>
-  </center>
- 
- </body>
-</html>
