@@ -30,10 +30,10 @@
       <br>
       <center>
        <a href="organization.html">Index</a> :&nbsp;
-       Directors :&nbsp;
+       <a href="board_of_directors.html">Directors</a> :&nbsp;
        <a href="advisory_board.html">Advisors</a> :&nbsp;
        <a href="executive_director.html">Executive Director</a> :&nbsp;
-       <a href="board_of_directors-2000.html">2000</a>
+       2000
       </center>
      </td>
     </tr>
@@ -54,37 +54,37 @@
       </p>
 
       <p>
-       The Board of Directors for Fall 2001 through Fall 2002 is:
+       The Board of Directors for Fall 2000 through Fall 2001 is:
        <ul>
         <li>
-         <em>Jonathan Blandford</em>
-        </li>
-        <li>
-         <em>Miguel de Icaza</em>
-        </li>
-        <li>
-         <em>Nat Friedman</em>
+         <em>Bart Decrem</em>
         </li>
         <li>
          <em>Jim Gettys</em>
         </li>
         <li>
-         <em>Jody Goldberg</em>
+         <em>John Heard</em>
         </li>
         <li>
-         <em>Telsa Gwynne</em>
+         <em>Miguel de Icaza</em>
         </li>
         <li>
-         <em>James Henstridge</em>
+         <em>Raph Levien</em>
         </li>
         <li>
-         <em>George Lebl</em>
-        </li>
-        <li>
-         <em>Federico Mena-Quintero</em>
+         <em>Dan Mueth</em>
         </li>
         <li>
          <em>Havoc Pennington</em>
+        </li>
+        <li>
+         <em>Federico Mena Quintero</em>
+        </li>
+        <li>
+         <em>Maciej Stachowiak</em>
+        </li>
+        <li>
+         <em>Owen Taylor</em>
         </li>
         <li>
          <em>Daniel Veillard</em>
