@@ -61,6 +61,16 @@
 <a NAME="News"></a><b>News</b>: 
 <ul>
  <li>
+ <strong>Results of 2001 election official</strong>
+ <small>(12/07/2001)</small>
+ <blockquote>
+ The GNOME Foundation Membership & Elections Committee are pleased to announce the following members 
+ as official Foundation board directors for the 2001/2002 term of office - <BR>
+ Jonathan Blandford, Miguel de Icaza, Nat Friedman, Jim Gettys, Jody Goldberg, Telsa Gwynne,
+ James Henstridge, George Lebl, Federico Mena-Quintero, Havoc Pennington and Daniel Veillard. 
+ </blockquote>
+ </li>
+ <li>
  <strong>Preliminary results of 2001 election announced</strong>
  <small>(11/27/2001)</small>
  <blockquote>
