@@ -1,4 +1,12 @@
-2001-12-07  Glynn Foster  <glynn.foster@sun.com>
+2001-12-08  Glynn Foster <glynn.foster@sun.com>
+
+	* board_of_directors-2000.html:
+	* board_of_directors.html:
+	* index.html:
+
+	Add details of new official board members.
+
+2001-12-07  Glynn Foster <glynn.foster@sun.com>
 
 	* press/pr-accessible.html:
 	* press/pr-borlandjoins.html:
